--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@ All <strong>credits</strong> for various Snippets (and also for the old (now unu
 All <strong>credits</strong> for Syntax highlighting in UnrealScript files goes to <strong><a href="https://github.com/rokit">Rokit</a></strong> and <strong><a href="https://github.com/EliotVU">Eliot</a></strong>. Thanks!<br><strong>Credits</strong> for Syntax highlighting in Log files goes to <strong><a href="https://github.com/rokit">Rokit</a></strong>. Thanks!</p>
 
 <p>I think I've earned a bear for my effort <img class="emoji" title=":wink:" alt=":wink:" src="https://github.global.ssl.fastly.net/images/icons/emoji/wink.png" height="20" width="20" align="absmiddle"><br><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XT5LYESK99ESA"><img src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" alt="Donate"></a>  </p>
-
+<iframe style="border: 0; margin: 0; padding: 0;"
+        src="https://www.gittip.com/Zinggi/widget.html"
+        width="48pt" height="22pt"></iframe>
 <h2>
 <a name="my-auto-complete-settings" class="anchor" href="#my-auto-complete-settings"><span class="octicon octicon-link"></span></a>My auto-complete settings</h2>
 
